2003-01-30  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/plug-ins.c (dia_plugin_load): Fixed typo.

	* app/properties.c (create_dialog): Destroy properties dialog and
	box correctly.

	* app/sheets_dialog_callbacks.c
	(on_sheets_dialog_button_edit_clicked): Only create a new dialog
	if the old one is destroyed.

2003-01-29  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/lineprops_area.c (dia_arrow_chooser_new): Use menudesc list
	to generate arrowheads as well as tooltips.

	* lib/arrows.c: Added hollow diamond to menudesc list.

	* lib/arrows.[ch]: 
	* lib/widgets.[ch]: Moved arrow name list into arrows.[ch] to
	unify with rendered menu.

	* lib/diarenderer.c (draw_line_with_arrows)
	(draw_polyline_with_arrows, draw_arc_with_arrows)
	(draw_bezier_with_arrows): Fixed linestyle change bug (#104488)
	without changing renderer API.  Thanks to David Scherba for
	providing inspiration.

2003-01-28  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/interface.c (create_display_shell):
	* app/display.h: Patching from Hubert Figuiere
	<hfiguiere@teaser.fr>:  Better types for menu bar widgets, and
	correct menu items.

2003-01-26  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/defaults.c (defaults_show): Fixed defaults closing bug.
	Thanks to Hans for pointing it out.

2003-01-25  Hans Breuer  <hans@breuer.org>

	* app/commands.c : don't warn about crashing libart renderer
	on win32. It simply doesn't render text anymore :-(

	* app/filedlg.c : use GtkMessageDialog for 'file overwrite'

	* objects/UML/class.c : don't access umlclass->properties_dialog
	after calling gtk_widget_destroy(umlclass->properties_dialog->dialog)
	which sets the former to NULL by destroy_properties_dialog() callback.

	* plug-ins/wmf/wmf.cpp : use dia_image_rowstride()

	* plug-ins/python/pydia-font.c : fix PyDiaFont_GetAttr()

	* plug-ins/python/pydia-image.c : add image.uri member
	not only useful for SVG rendering

	* plug-ins/python/diasvg.py : (new file) a more advanced